--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
     implementation 'org.seleniumhq.selenium:selenium-java:4.21.0'
 
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.0'
+
 }
 
 buildDir = 'build'
